# Datateknikk-Rover-Software

./: CMakeLists.txt  TCP.cpp  Test_byte_reading.cpp  cam.cpp  main.cpp  mainLidar.cpp  rvr.cpp  simple_camera.cpp  testSocket.cpp  unix.cc  yolo_test.cpp
include/: Rover.hpp  RoverSensorData.hpp  RoverSerial.hpp  RoverSerialMessage.hpp  RoverSerialSensorStreamService.hpp  RoverStateStreamer.hpp  SerialEnum.hpp  communication.hpp  lidarDriver.hpp
include/camera/: CameraStreamer.hpp  Yolo.hpp
include/lidar/: Lidar.hpp  LidarDriver.hpp  communication.hpp
include/rover/: Rover.hpp  RoverSerial.hpp  RoverSerialHeader.hpp  RoverSerialParser.hpp  RoverSerialSensorStream.hpp  RoverStateStreamer.hpp
include/tools/: TCPStreamer.hpp
src/: CMakeLists.txt  Rover.cpp  RoverSerial.cpp  RoverSerialHeader.cpp  RoverSerialMessage.cpp  RoverSerialParser.cpp  RoverSerialSensorStreamService.cpp  RoverSocketStreamer.cpp  communication.cpp  lidarDriver.cpp
src/camera/: CameraStreamer.cpp  Yolo.cpp
src/lidar/: Lidar.cpp  LidarDriver.cpp  communication.cpp
src/rover/: Rover.cpp  RoverSerial.cpp  RoverSerialParser.cpp  RoverStateStreamer.cpp
src/tools/: TCPStreamer.cpp
